--- a/playlist.html
+++ b/playlist.html
@@ -143,10 +143,6 @@
             <li><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></li>
             <li>Vete <br>Bad Bunny </br></li>
             <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
-<<<<<<< HEAD
-            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
-=======
->>>>>>> 61307e8b1d07f36343417c9f5bc08632f8392115
             <li>All Around Me <br>Justin Bieber</li>
             <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
             <li>She Loves Control <br>Camila Cabello</li>
@@ -155,10 +151,6 @@
             <li><img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone"></li>
             <li>Big Lie <br>Post Malone</li>
             <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
-<<<<<<< HEAD
-            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
-=======
->>>>>>> 61307e8b1d07f36343417c9f5bc08632f8392115
             <li>Stay With Me <br>Sam Smith</li>
             <li><img class="fotoartista"  src="img/shawnmendez.jpg" alt="shawnmendez"></li>
             <li>Ruin <br>Shawn Mendes</li>
@@ -176,15 +168,15 @@
             <li>Finesse <br>Bruno Mars</li>
             <li><img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots"></li>
             <li>Stressed Out <br>Twenty One Pillots</li>
-            <img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
+            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
             <li>All Around Me <br>Justin Bieber</li>
-            <img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
+            <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
             <li>She Loves Control <br>Camila Cabello</li>
-            <img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons"></li>
+            <li><img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons"></li>
             <li>Next To Me <br>Imagine Dragons</li>
-            <img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone"></li>
+            <li><img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone"></li>
             <li>Big Lie <br>Post Malone</li>
-            <img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
+            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
             <li>Stay With Me <br>Sam Smith</li>
             <li><img class="fotoartista"  src="img/shawnmendez.jpg" alt="shawnmendez"></li>
             <li>Ruin <br>Shawn Mendes</li>
@@ -200,40 +192,18 @@
             <li>Survival <br>Drake</li>
             <li><img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars"></li>
             <li>Finesse <br>Bruno Mars</li>
-<<<<<<< HEAD
             <li><img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots"></li>
-=======
->>>>>>> 61307e8b1d07f36343417c9f5bc08632f8392115
-            <img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots"></li>
             <li>Stessed Out <br>Twenty One Pilots</li>
             <li><img class="fotoartista"  src="img/trilogy.jpg" alt="trilogy"></li>
             <li>High For This <br>The Weeknd</li>
             <li><img class="fotoartista"  src="img/badbunny.png" alt="badbunny"></li>
-<<<<<<< HEAD
-            <li><img class="fotoartista"  src="img/badbunny.png" alt="badbunny">
-=======
->>>>>>> 61307e8b1d07f36343417c9f5bc08632f8392115
             <li>NI BIEN NI MAL <br>Bad Bunny</li>
             <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
             <li>Habitual <br>Justin Bieber</li>
             <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
             <li>Never Be the Same <br>Camila Cabello</li>
             <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
-<<<<<<< HEAD
-            <li>To Die For <br>Sam Smith</li>
-            <li><img class="fotoartista"  src="img/badbunny.png" alt="badbunny"></li>
-            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
-=======
             <li>To good at goodbyes <br> Sam Smith</li>
->>>>>>> 61307e8b1d07f36343417c9f5bc08632f8392115
-            <img class="fotoartista"  src="img/badbunny.png" alt="badbunny"></li>
-            <li>NI BIEN NI MAL <br>Bad Bunny</li>
-            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
-            <li>Habitual <br>Justin Bieber</li>
-            <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
-            <li>Never Be the Same <br>Camila Cabello</li>
-            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
-            <li>I'm Not The Only One <br>Sam Smith</li>
         </ul>
     </div>
 </section>
