--- a/playlist.html
+++ b/playlist.html
@@ -27,114 +27,113 @@
 </div>
 <div class="playlist">
     <ul>
-    <img class= "fotoartista" src="" alt="" srcset="">
+    <li><img class= "fotoartista" src="" alt="" srcset=""></li>
     <li class="encabezado">Canción</li>
     <li class="encabezado">Artista </li>
     <li class="encabezado">Álbum</li>
     <li class="puntos"></li>
-    <img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset="">
-    <li>LA CANCIÓN</li>
+    <li><a href="audio/la-cancion.mp3"><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a></li>
+    <li> LA CANCIÓN</li>
     <li>J. Balvin</li>
     <li>OASIS</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
+    <li><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></li>
     <li>Vete</li>
     <li>Bad Bunny</li>
     <li>YHLQMDLG</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset="">
+    <li><img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></li>
     <li>All Around Me</li>
     <li>Justin Bieber </li>
     <li>Changes</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset="">
+    <li><img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset=""></li>
     <li>She Loves Control</li>
     <li>Camila Cabello </li>
     <li>Camila</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/imaginedragons.jpg" alt="imaginedragons" srcset="">
+    <li><img class="fotoartista" src="img/imaginedragons.jpg" alt="imaginedragons" srcset=""></li>
     <li>Next To Me</li>
     <li>Imagine Dragons </li>
     <li>Evolve</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/postmalone.jpg" alt="postmalone" srcset="">
+    <li><img class="fotoartista" src="img/postmalone.jpg" alt="postmalone" srcset=""></li>
     <li>Big Lie</li>
     <li>Post Malone</li>
     <li>Stoney (Deluxe)</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset="">
+    <li><img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset=""></li>
     <li>Stay With Me</li>
     <li>Sam Smith</li>
     <li>In The Lonely Hour</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/shawnmendez.jpg" alt="shawnmendez" srcset="">
+    <li><img class="fotoartista" src="img/shawnmendez.jpg" alt="shawnmendez" srcset=""></li>
     <li>Ruin</li>
     <li>Shawn Mendes</li>
     <li>Illuminate (Deluxe)</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/theweeknd.jpg" alt="theweekend" srcset="">
+    <li><img class="fotoartista" src="img/theweeknd.jpg" alt="theweekend" srcset=""></li>
     <li>Alone Again</li>
     <li>The Weeknd</li>
     <li>After Hours</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/travis.jpg" alt="travis" srcset="">
+    <li><img class="fotoartista" src="img/travis.jpg" alt="travis" srcset=""></li>
     <li>STARGAZING</li>
     <li>Travis Scott</li>
     <li>ASTROWORLD</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset="">
+    <li><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></li>
     <li>COMO UN BEBÉ</li>
     <li>J. Balvin</li>
     <li>OASIS</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/dualipa.jpg" alt="dualipa" srcset="">
+    <li><img class="fotoartista" src="img/dualipa.jpg" alt="dualipa" srcset=""></li>
     <li>Genesis</li>
     <li>Dua Lipa</li>
     <li>Dua Lipa (Deluxe)</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/drake (2).jpg" alt="drake" srcset="">
+    <li><img class="fotoartista" src="img/drake (2).jpg" alt="drake" srcset=""></li>
     <li>Survival</li>
     <li>Drake</li>
     <li>Scorpion</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/brunomars.jpg" alt="brunomars" srcset="">
+    <li><img class="fotoartista" src="img/brunomars.jpg" alt="brunomars" srcset=""></li>
     <li>Finesse</li>
     <li>Bruno Mars</li>
     <li>24K Magic</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/twentyonepilots.jpg" alt="twentyonepilots" srcset="">
+    <li><img class="fotoartista" src="img/twentyonepilots.jpg" alt="twentyonepilots" srcset=""></li>
     <li>Stressed Out</li>
     <li>Twenty One Pilots</li>
     <li>Blurryface</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/trilogy.jpg" alt="trilogy" srcset="">
+    <li><img class="fotoartista" src="img/trilogy.jpg" alt="trilogy" srcset=""></li>
     <li>High For This</li>
     <li>The Weeknd</li>
     <li>Trilogy</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
+    <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></li>
     <li>NI BIEN NI MAL</li>
     <li>Bad Bunny</li>
     <li>X100PRE</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset="">
+    <li><img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></li>
     <li>Habitual</li>
     <li>Justin Bieber</li>
     <li>Changes</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset="">
+    <li><img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset=""></li>
     <li>Never Be the Same</li>
     <li>Camila Cabello</li>
     <li>Camila</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset="">
+    <li><img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset=""></li>
     <li>I'm Not The Only One</li>
     <li>Sam Smith</li>
     <li>In The Lonely Hour</li>
     <li class="puntos">...</li>
     </ul> 
 </div>
-</section>
 <section class="p-celu">
     <div class="mobile">
         <ul class="play-celu">
