--- a/playlist.html
+++ b/playlist.html
@@ -32,102 +32,102 @@
     <li class="encabezado">Artista </li>
     <li class="encabezado">Álbum</li>
     <li class="puntos"></li>
-    <li><a href="audio/la-cancion.mp3"><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a></li>
+    <li><a href="audio/la-cancion.mp3" target="_blank"><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a></li>
     <li> LA CANCIÓN</li>
     <li>J. Balvin</li>
     <li>OASIS</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></li>
+    <li><a href="audio/VETE.mp3" target="_blank"><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></a></li>
     <li>Vete</li>
     <li>Bad Bunny</li>
     <li>YHLQMDLG</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></li>
+    <li><a href="audio/Justin Bieber - All Around Me (Audio).mp3" target="_blank"><img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></a></li>
     <li>All Around Me</li>
     <li>Justin Bieber </li>
     <li>Changes</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset=""></li>
+    <li><a href="audio/Camila Cabello - She Loves Control (Audio).mp3" target="_blank"><img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset=""></a></li>
     <li>She Loves Control</li>
     <li>Camila Cabello </li>
     <li>Camila</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/imaginedragons.jpg" alt="imaginedragons" srcset=""></li>
+    <li><a href="audio/Imagine Dragons - Next To Me (Audio).mp3" target="_blank"><img class="fotoartista" src="img/imaginedragons.jpg" alt="imaginedragons" srcset=""></a></li>
     <li>Next To Me</li>
     <li>Imagine Dragons </li>
     <li>Evolve</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/postmalone.jpg" alt="postmalone" srcset=""></li>
+    <li><a href="audio/Post Malone - Big Lie lyrics.mp3" target="_blank"><img class="fotoartista" src="img/postmalone.jpg" alt="postmalone" srcset=""></a></li>
     <li>Big Lie</li>
     <li>Post Malone</li>
     <li>Stoney (Deluxe)</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset=""></li>
+    <li><a href="audio/Sam Smith - Stay With Me.mp3" target="_blank"><img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset=""></a></li>
     <li>Stay With Me</li>
     <li>Sam Smith</li>
     <li>In The Lonely Hour</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/shawnmendez.jpg" alt="shawnmendez" srcset=""></li>
+    <li><a href="audio/Shawn Mendes - Ruin.mp3" target="_blank"><img class="fotoartista" src="img/shawnmendez.jpg" alt="shawnmendez" srcset=""></a></li>
     <li>Ruin</li>
     <li>Shawn Mendes</li>
     <li>Illuminate (Deluxe)</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/theweeknd.jpg" alt="theweekend" srcset=""></li>
+    <li><a href="audio/The Weeknd - Alone Again (Audio).mp3" target="_blank"><img class="fotoartista" src="img/theweeknd.jpg" alt="theweekend" srcset=""></a></li>
     <li>Alone Again</li>
     <li>The Weeknd</li>
     <li>After Hours</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/travis.jpg" alt="travis" srcset=""></li>
+    <li><a href="audio/Travis Scott - STARGAZING (Audio).mp3" target="_blank"><img class="fotoartista" src="img/travis.jpg" alt="travis" srcset=""></a></li>
     <li>STARGAZING</li>
     <li>Travis Scott</li>
     <li>ASTROWORLD</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></li>
+    <li><a href="audio/J. Balvin, Bad Bunny, Mr Eazi - Baila Pa Mi (Video Oficial).mp3" target="_blank"><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a></li>
     <li>COMO UN BEBÉ</li>
     <li>J. Balvin</li>
     <li>OASIS</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/dualipa.jpg" alt="dualipa" srcset=""></li>
+    <li><a href="audio/Dua Lipa - Genesis (Acoustic).mp3"target="_blank"><img class="fotoartista" src="img/dualipa.jpg" alt="dualipa" srcset=""></a></li>
     <li>Genesis</li>
     <li>Dua Lipa</li>
     <li>Dua Lipa (Deluxe)</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/drake (2).jpg" alt="drake" srcset=""></li>
+    <li><a href="audio/DRAKE_SURVIVAL (OFFICIAL AUDIO).mp3"target="_blank"><img class="fotoartista" src="img/drake (2).jpg" alt="drake" srcset=""></a></li>
     <li>Survival</li>
     <li>Drake</li>
     <li>Scorpion</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/brunomars.jpg" alt="brunomars" srcset=""></li>
+    <li><a href="audio/Bruno Mars - Finesse [Official Audio].mp3" target="_blank"><img class="fotoartista" src="img/brunomars.jpg" alt="brunomars" srcset=""></a></li>
     <li>Finesse</li>
     <li>Bruno Mars</li>
     <li>24K Magic</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/twentyonepilots.jpg" alt="twentyonepilots" srcset=""></li>
+    <li><a href="audio/twenty one pilots Stressed Out [OFFICIAL VIDEO].mp3" target="_blank"><img class="fotoartista" src="img/twentyonepilots.jpg" alt="twentyonepilots" srcset=""></a></li>
     <li>Stressed Out</li>
     <li>Twenty One Pilots</li>
     <li>Blurryface</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/trilogy.jpg" alt="trilogy" srcset=""></li>
+    <li><a href="audio/The Weeknd - High For This.mp3" target="_blank"><img class="fotoartista" src="img/trilogy.jpg" alt="trilogy" srcset=""></a></li>
     <li>High For This</li>
     <li>The Weeknd</li>
     <li>Trilogy</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></li>
+    <li><a href="audio/Ni Bien Ni Mal - Bad Bunny ( Video Oficial ).mp3"target="_blank"><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></a></li>
     <li>NI BIEN NI MAL</li>
     <li>Bad Bunny</li>
     <li>X100PRE</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></li>
+    <li><a href="audio/Justin Bieber - Habitual (Audio) (1).mp3"target="_blank"><img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></a></li>
     <li>Habitual</li>
     <li>Justin Bieber</li>
     <li>Changes</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset=""></li>
+    <li><a href="audio/Camila Cabello - Never Be the Same.mp3" target="_blank"><img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset=""></a></li>
     <li>Never Be the Same</li>
     <li>Camila Cabello</li>
     <li>Camila</li>
     <li class="puntos">...</li>
-    <li><img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset=""></li>
+    <li><a href="audio/Sam Smith - Im Not The Only One.mp3" target="_blank"><img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset=""></a></li>
     <li>I'm Not The Only One</li>
     <li>Sam Smith</li>
     <li>In The Lonely Hour</li>
@@ -137,71 +137,46 @@
 <section class="p-celu">
     <div class="mobile">
         <ul class="play-celu">
-            <li><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></li>
+            <li><a href="audio/la-cancion.mp3" target="_blank"><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a></li>
             <li>LA CANCIÓN <br>J Balvin</br></li>
-            <li><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></li>
+            <li><a href="audio/VETE.mp3" target="_blank"><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset=""></a></li>
             <li>Vete <br>Bad Bunny </br></li>
-            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
+            <li><a href="audio/Justin Bieber - All Around Me (Audio).mp3" target="_blank"><img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></a></li>
             <li>All Around Me <br>Justin Bieber</li>
-            <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
+            <li><a href="audio/Camila Cabello - She Loves Control (Audio).mp3" target="_blank"><img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset=""></a></li>
             <li>She Loves Control <br>Camila Cabello</li>
-            <li><img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons"></li>
+            <li><a href="audio/Imagine Dragons - Next To Me (Audio).mp3" target="_blank"><img class="fotoartista" src="img/imaginedragons.jpg" alt="imaginedragons" srcset=""></a></li>
             <li>Next To Me <br>Imagine Dragons</li>
-            <li><img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone"></li>
+            <li><a href="audio/Post Malone - Big Lie lyrics.mp3" target="_blank"><img class="fotoartista" src="img/postmalone.jpg" alt="postmalone" srcset=""></a></li>
             <li>Big Lie <br>Post Malone</li>
-            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
+            <li><a href="audio/Sam Smith - Stay With Me.mp3" target="_blank"><img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset=""></a></li>
             <li>Stay With Me <br>Sam Smith</li>
-            <li><img class="fotoartista"  src="img/shawnmendez.jpg" alt="shawnmendez"></li>
+            <li><a href="audio/Shawn Mendes - Ruin.mp3" target="_blank"><img class="fotoartista" src="img/shawnmendez.jpg" alt="shawnmendez" srcset=""></a></li>
             <li>Ruin <br>Shawn Mendes</li>
-            <li><img class="fotoartista"  src="img/albumafterhours.jpg" alt="theweekend"></li>
+            <li><a href="audio/The Weeknd - Alone Again (Audio).mp3" target="_blank"><img class="fotoartista" src="img/theweeknd.jpg" alt="theweekend" srcset=""></a></li>
             <li>Alone Again <br>The Weekend</li>
-            <li><img class="fotoartista"  src="img/travis.jpg" alt="travis"></li>
+            <li><a href="audio/Travis Scott - STARGAZING (Audio).mp3"target="_blank"><img class="fotoartista"  src="img/travis.jpg" alt="travis"></a></li>
             <li>STARGAZING <br>Travis Scott</li>
-            <li><img class="fotoartista"  src="img/jbalvin (2).jpg" alt="jbalvin"></li>
+            <li><a href="audio/J. Balvin, Bad Bunny, Mr Eazi - Baila Pa Mi (Video Oficial).mp3"target="_blank"><img class="fotoartista"  src="img/jbalvin (2).jpg" alt="jbalvin"></a></li>
             <li>COMO UN BEBÉ <br>J Balvin</li>
-            <li><img class="fotoartista"  src="img/dualipa.jpg" alt="dualipa"></li>
+            <li><a href="audio/Dua Lipa - Genesis (Acoustic).mp3" target="_blank"><img class="fotoartista"  src="img/dualipa.jpg" alt="dualipa"></a></li>
             <li>Genesis <br>Dua Lipa</li>
-            <li><img class="fotoartista"  src="img/drake (2).jpg" alt="drake"></li>
+            <li><a href="audio/DRAKE_SURVIVAL (OFFICIAL AUDIO).mp3" target="_blank"><img class="fotoartista"  src="img/drake (2).jpg" alt="drake"></a></li>
             <li>Survival <br>Drake</li>
-            <li><img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars"></li>
+            <li><a href="audio/Bruno Mars - Finesse [Official Audio].mp3" target="_blank"><img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars"></a></li>
             <li>Finesse <br>Bruno Mars</li>
-            <li><img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots"></li>
+            <li><a href="audio/twenty one pilots Stressed Out [OFFICIAL VIDEO].mp3" target="_blank"><img class="fotoartista"  src="img/twentyonepilots.jpg"></a> alt="twentyonepilots"></li>
             <li>Stressed Out <br>Twenty One Pillots</li>
-            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
-            <li>All Around Me <br>Justin Bieber</li>
-            <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
-            <li>She Loves Control <br>Camila Cabello</li>
-            <li><img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons"></li>
-            <li>Next To Me <br>Imagine Dragons</li>
-            <li><img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone"></li>
-            <li>Big Lie <br>Post Malone</li>
-            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
-            <li>Stay With Me <br>Sam Smith</li>
-            <li><img class="fotoartista"  src="img/shawnmendez.jpg" alt="shawnmendez"></li>
-            <li>Ruin <br>Shawn Mendes</li>
-            <li><img class="fotoartista"  src="img/albumafterhours.jpg" alt="theweekend"></li>
-            <li>Alone Again <br>The Weekend</li>
-            <li><img class="fotoartista"  src="img/travis.jpg" alt="travis"></li>
-            <li>STARGAZING <br>Travis Scott</li>
-            <li><img class="fotoartista"  src="img/jbalvin (2).jpg" alt="jbalvin"></li>
-            <li>COMO UN BEBÉ <br>J Balvin</li>
-            <li><img class="fotoartista"  src="img/dualipa.jpg" alt="dualipa"></li>
-            <li>Genesis <br>Dua Lipa</li>
-            <li><img class="fotoartista"  src="img/drake (2).jpg" alt="drake"></li>
-            <li>Survival <br>Drake</li>
-            <li><img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars"></li>
-            <li>Finesse <br>Bruno Mars</li>
-            <li><img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots"></li>
-            <li>Stessed Out <br>Twenty One Pilots</li>
-            <li><img class="fotoartista"  src="img/trilogy.jpg" alt="trilogy"></li>
+            <li><a href="audio/Imagine Dragons - Next To Me (Audio).mp3" target="_blank"><img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons"></a>></li>
+            <li><a href="audio/The Weeknd - High For This.mp3" target="_blank"><img class="fotoartista"  src="img/trilogy.jpg" alt="trilogy"></a></li>
             <li>High For This <br>The Weeknd</li>
-            <li><img class="fotoartista"  src="img/badbunny.png" alt="badbunny"></li>
+            <li><a href="audio/Ni Bien Ni Mal - Bad Bunny ( Video Oficial ).mp3" target="_blank"><img class="fotoartista"  src="img/badbunny.png" alt="badbunny"></a></li>
             <li>NI BIEN NI MAL <br>Bad Bunny</li>
-            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></li>
+            <li><a href="audio/Justin Bieber - Habitual (Audio) (1).mp3" target="_blank"><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber"></a></li>
             <li>Habitual <br>Justin Bieber</li>
-            <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></li>
+            <li><a href="audio/Camila Cabello - Never Be the Same.mp3" target="_blank"><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></a></li>
             <li>Never Be the Same <br>Camila Cabello</li>
-            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></li>
+            <li><a href="audio/Sam Smith - Too Good At Goodbyes (Official Video).mp3" target="_blank"><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></a></li>
             <li>To good at goodbyes <br> Sam Smith</li>
         </ul>
     </div>
