--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="search" id="input-search" placeholder="Buscar aquí">
-    <div class="content-search">
-        <div class="content-table"></div>
-    </div>
-    <div class="container">
-        <header class="main-header">
-        </header>
-    </div>
     <div class="grid-container">
       <ul>
-      <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a>
-      <li><a class="titulos" href="detail.html">TRACKS</a></li>
-      <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
-      <li><a class="titulos" href="detail.html">ARTIST</a></li>
-      <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
-      </ul>    
+        <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
+        <li><a class="titulos" href="detail.html">TRACKS</a></li>
+        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
+        <li><a class="titulos" href="detail.html">ARTIST</a></li>
+        <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+      </ul> 
   </div>
    <section class="banner">
        <img class="banner" src="../ProyectoIntegrador/img/technomusica.jpg" alt="banner" srcset=""> 
