--- a/detail.html
+++ b/detail.html
@@ -10,11 +10,11 @@
 <body>
     <div class="grid-container">
         <ul>
-        <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a>
+        <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
         <li><a class="titulos" href="detail.html">TRACKS</a></li>
         <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
-        <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+        <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>    
     </div>
     <div class="orden">
