--- a/playlist.html
+++ b/playlist.html
@@ -15,12 +15,12 @@
 </div>
 <div class="grid-container">
     <ul>
-    <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a>
-    <li><a class="titulos" href="detail.html">TRACKS</a></li>
-    <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
-    <li><a class="titulos" href="detail.html">ARTIST</a></li>
-    <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
-    </ul>    
+        <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
+        <li><a class="titulos" href="detail.html">TRACKS</a></li>
+        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
+        <li><a class="titulos" href="detail.html">ARTIST</a></li>
+        <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+    </ul>  
 </div>
 <div class="titplaylist">
     <h2>MY PLAYLIST</h2>
@@ -165,9 +165,8 @@
             <li>Survival <br>Drake</li>
             <li><a href="audio/Bruno Mars - Finesse [Official Audio].mp3" target="_blank"><img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars"></a></li>
             <li>Finesse <br>Bruno Mars</li>
-            <li><a href="audio/twenty one pilots Stressed Out [OFFICIAL VIDEO].mp3" target="_blank"><img class="fotoartista"  src="img/twentyonepilots.jpg"></a> alt="twentyonepilots"></li>
+            <li><a href="audio/twenty one pilots Stressed Out [OFFICIAL VIDEO].mp3" target="_blank"><img class="fotoartista" src="img/twentyonepilots.jpg" alt="twentyonepilots"></a></li>
             <li>Stressed Out <br>Twenty One Pillots</li>
-            <li><a href="audio/Imagine Dragons - Next To Me (Audio).mp3" target="_blank"><img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons"></a>></li>
             <li><a href="audio/The Weeknd - High For This.mp3" target="_blank"><img class="fotoartista"  src="img/trilogy.jpg" alt="trilogy"></a></li>
             <li>High For This <br>The Weeknd</li>
             <li><a href="audio/Ni Bien Ni Mal - Bad Bunny ( Video Oficial ).mp3" target="_blank"><img class="fotoartista"  src="img/badbunny.png" alt="badbunny"></a></li>
